<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="smv.lovearthstudio.com.svmpro_v2.activity.main.MainActivity">

    <!-- 内容区域 -->
    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- 底部导航 -->
    <RadioGroup
        android:id="@+id/bottom_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tab_samping"
            style="@style/TabBottomStyle"
            android:drawableTop="@drawable/tab_samping_selector"
            android:text="@string/simping" />

        <RadioButton
            android:id="@+id/tab_train"
            style="@style/TabBottomStyle"
            android:drawableTop="@drawable/tab_train_selector"
            android:text="@string/train" />

        <RadioButton
            android:id="@+id/tab_forecast"
            style="@style/TabBottomStyle"
            android:drawableTop="@drawable/tab_predict_selector"
            android:text="@string/predict" />

        <RadioButton
            android:id="@+id/tab_fft"
            style="@style/TabBottomStyle"
            android:drawableTop="@drawable/tab_predict_selector"
            android:text="@string/fft" />

        <RadioButton
            android:id="@+id/tab_setting"
            style="@style/TabBottomStyle"
            android:drawableTop="@drawable/tab_setting_selector"
            android:text="@string/setting" />
    </RadioGroup>
</LinearLayout>
